--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <nav>
     <div class="logo">
-      <img src="images/cropped.png" alt="" height="100%">
+      <img src="images/mynd.png" alt="" height="100%">
     </div>
     <div class="others">
       <a style="color: #fd0185;" href="pages/contact_form/contact.html">contact us</a>
