--- a/pages/aritcles/articles.html
+++ b/pages/aritcles/articles.html
@@ -30,7 +30,7 @@
     <div class="canvas fade">
 
         <div class="box3">
-            <h1 style="color: #fd0185;"> A bit on the mynd</h1>
+            <h1 style="color: #fd0185;"> A bit on mental health</h1>
             <section id="section1">
                 <p>Mental health is a term that refers to a person's emotional, psychological, and social well-being. It
                     is an essential aspect of overall health and is just as important as physical health.
