--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
   </nav>
   <div class="canvas fade">
     <div class="box1">
-      <h1 style="text-align: center; color: #01b4ee;">Our Mission</h1>
-      <p style="text-align: center; color: #323338;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti
-        error inventore, amet incidunt iusto architecto quod id cum dolorum. Ratione porro temporibus eos asperiores
-        harum repellat aperiam maxime, numquam nisi?</p>
+      <h1 style="text-align: center; color: #01b4ee;">Hello</h1>
+      <p style="text-align: center; color: #323338;">Want to learn about mental illness, add and talk to the health savvy about your psychological burdens? This space was created for you. Were here to help.</p>
     </div>
    
    <div class="box2">
