--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="canvas fade">
     <div class="box1">
       <h1 style="text-align: center; color: #01b4ee;">Hello</h1>
-      <p style="text-align: center; color: #323338; padding: padding: 10px">Want to learn about mental illness, add and talk to the health savvy about your psychological burdens?
+      <p style="text-align: center; color: #323338;">Want to learn about mental illness, add and talk to the health savvy about your psychological burdens?
         <br/>This space was created for you. Were here to help.</p>
     </div>
    
