--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="index.css">
+  <link rel="stylesheet" type="text/css" href="index2.css">
   <title>mynd Garden</title>
 </head>
 
@@ -21,9 +21,9 @@
   </nav>
   <div class="canvas fade">
     <div class="box1">
-      <h1 style="text-align: center; color: #01b4ee;">Hello</h1>
+      <h1 style="text-align: center; color: #fd0185;">Hello</h1>
       <p style="text-align: center; color: #323338;">Want to learn about mental illness, add and talk to the health savvy about your psychological burdens?
-        <br/>This space was created for you. Were here to help.</p>
+        <br/>This space was created for you. Wen are here to help</p>
     </div>
    
    <div class="box2">
