--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="box1">
       <h1 style="text-align: center; color: #fd0185;">Hello</h1>
       <p style="text-align: center; color: #323338;">Want to learn about mental illness, add and talk to the health savvy about your psychological burdens?
-        <br/>This space was created for you. Wen are here to help</p>
+        <br/>This space was created for you. We are here to help</p>
     </div>
    
    <div class="box2">
