--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="index.css">
+  <meta name='impact-site-verification' value='7e89e7de-0f03-4206-b572-5cf0ca1773a8'>
   <title>mynd Garden</title>
 </head>
 
